redirect permanently from http to https change nginx service from NodePort to ClusterIP and set externalIPs instead of hostPorts

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,8 +19,8 @@ upstream jhub {
 server {
     listen 80;
     server_name notebooks-test.gesis.org 194.95.75.10;
-    # Tell all requests to port 80 to be 302 redirected to HTTPS
-    return 302 https://$host$request_uri;
+    # Tell all requests to port 80 to be 301 (permanently) redirected to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 # HTTPS server
