--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: nginx
 spec:
-  type: NodePort
   selector:
     app: nginx
   ports:
@@ -13,12 +12,12 @@ spec:
     protocol: TCP
     targetPort: 80
     port: 80
-    nodePort: 30176
   - name: https
     protocol: TCP
     targetPort: 443
     port: 443
-    nodePort: 30177
+  externalIPs:
+    - 194.95.75.10
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -42,11 +41,6 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.13.6
-        ports:
-        - containerPort: 80
-          hostPort: 80
-        - containerPort: 443
-          hostPort: 443
         resources:
           requests:
             cpu: "0.25"
