--- a/jupyterhub/nginx.conf
+++ b/jupyterhub/nginx.conf
@@ -7,10 +7,6 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-upstream bhub {
-  server 194.95.75.10:30183;
-}
-
 upstream jhub {
   server 194.95.75.10:30180;
 }
@@ -47,16 +43,9 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
-    location / {
+    location /services/binder/ {
         proxy_buffering off;
 
-        proxy_pass http://bhub;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-    location /jupyter/ {
         proxy_pass http://jhub;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
@@ -64,5 +53,18 @@ server {
         # websocket headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        }
+
+    location / {
+        proxy_pass http://jhub;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # websocket headers
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+    location = /jupyter/ {
+      return 302 /;
     }
 }
