--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -16,7 +16,7 @@ jupyterhub:
     baseUrl: /
     image:
       name: gesiscss/k8s-hub-example
-      tag: "TODO"
+      tag: "3d0bb3f"
 
     services:
       binder:
