--- a/jupyterhub/nginx.conf
+++ b/jupyterhub/nginx.conf
@@ -64,7 +64,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
     }
-    location = /jupyter/ {
-      return 302 /;
+    location /jupyter {
+      return 302 https://$host$request_uri;
     }
 }
