fix cookie_options for secure cookies

--- a/config.yaml
+++ b/config.yaml
@@ -58,7 +58,10 @@ jupyterhub:
       hub_extra: |
         c.JupyterHub.redirect_to_server = False
         c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
-        c.JupyterHub.cookie_options = dict(secure=True)
+        if "cookie_options" in c.JupyterHub.tornado_settings:
+          c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True}))
+        else:
+          c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
       neverRestart: |
         c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
 
