add default server block

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,16 @@ upstream jhub {
   server 194.95.75.10:30190;
 }
 
-# HTTP server to redirect all 80 traffic to SSL/HTTPS
+server {
+    listen 80 default_server;
+    listen 443 ssl default_server;
+    server_name _;
+    ssl_certificate /etc/letsencrypt_volume/live/notebooks-test.gesis.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt_volume/live/notebooks-test.gesis.org/privkey.pem;
+    return 404;
+}
+
+# HTTP server to redirect notebooks-test.gesis.org 80 traffic to SSL/HTTPS
 server {
     listen 80;
     server_name notebooks-test.gesis.org;
