--- a/persistent_storage/config.yaml
+++ b/persistent_storage/config.yaml
@@ -68,18 +68,18 @@ jupyterhub:
             #repo_name = self.repo_url.rstrip('/').split('/')[-1]
             repo_dir = '_'.join(reversed(self.repo_url.split('/')[-2:]))
             symlink_dir = join(repo_dir, 'PersistentStorage')
+            # symlink_cmd: create a symlink to home if directory or symlink with same name does not exist
+            symlink_cmd = f'if [[-d {symlink_dir} ]]; ' \
+                          f'then echo "directory {symlink_dir} exists"; ' \
+                          f'elif [[ -L {symlink_dir} ]]; ' \
+                          f'then echo "{symlink_dir} is a symlink"; ' \
+                          f'else ln -s ~ {symlink_dir}; fi'
             if self.repo_url.endswith('github.com/gesiscss/data_science_image'):
-              self.lifecycle_hooks = {'postStart': {'exec': {'command': ["mkdir", "-p", repo_dir]}}}
+              command = f'mkdir -p {repo_dir} && ' + symlink_cmd
+              self.lifecycle_hooks = {'postStart': {'exec': {'command': ["/bin/sh", "-c", command]}}}
             elif self.user_options.get('run-nbgitpuller', 'true').lower() in ['true', '1']:
               # by default run nbgitpuller
-              # command -> run nbgitpuller and create a symlink to home if directory or symlink with same name does not exist
-              command = f'gitpuller {self.repo_url} master {repo_dir}' \
-                        f' && ' \
-                        f'if [[-d {symlink_dir} ]]; ' \
-                        f'then echo "directory {symlink_dir} exists"; ' \
-                        f'elif [[ -L {symlink_dir} ]]; ' \
-                        f'then echo "{symlink_dir} is a symlink"; ' \
-                        f'else ln -s ~ {symlink_dir}; fi'
+              command = f'gitpuller {self.repo_url} master {repo_dir} && ' + symlink_cmd
               self.lifecycle_hooks = {'postStart': {'exec': {'command': ["/bin/sh", "-c", command]}}}
             else:
               self.lifecycle_hooks = {}
