--- a/persistent_storage/nginx.conf
+++ b/persistent_storage/nginx.conf
@@ -8,7 +8,15 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream jhub {
+  server 194.95.75.9:30190;
   server 194.95.75.10:30190;
+  server 194.95.75.11:30190;
+}
+
+upstream keycloak {
+  server 194.95.75.9:30200;
+  server 194.95.75.10:30200;
+  server 194.95.75.11:30200;
 }
 
 server {
@@ -29,7 +37,7 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS server
+# HTTPS server for notebooks-test.gesis.org
 server {
     listen 443;
     ssl on;
@@ -72,5 +80,50 @@ server {
         # websocket headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+    }
+}
+
+# HTTP server to redirect login-test.gesis.org 80 traffic to SSL/HTTPS
+server {
+    listen 80;
+    server_name login-test.gesis.org;
+    access_log off;  # turn off access log
+    # Tell all requests to port 80 to be 301 (permanently) redirected to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS server for login-test.gesis.org
+server {
+    listen 443;
+    ssl on;
+
+    server_name login-test.gesis.org;
+
+    ssl_certificate /etc/letsencrypt_volume/live/login-test.gesis.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt_volume/live/login-test.gesis.org/privkey.pem;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_dhparam /etc/letsencrypt_volume/dhparam_test.pem;
+    ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
+    # https://docs.nginx.com/nginx/admin-guide/security-controls/terminating-ssl-http/#https-server-optimization
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;  # 50mb shared session cache
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    add_header Strict-Transport-Security max-age=15768000;
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+
+    location / {
+        proxy_pass http://keycloak;
+
+        proxy_set_header    Host               $host;
+        proxy_set_header    X-Real-IP          $remote_addr;
+        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Host   $host;
+        proxy_set_header    X-Forwarded-Server $host;
+        proxy_set_header    X-Forwarded-Port   $server_port;
+        proxy_set_header    X-Forwarded-Proto  $scheme;
     }
 }
