add reset button. update UI.

--- a/persistent_storage/config.yaml
+++ b/persistent_storage/config.yaml
@@ -6,7 +6,7 @@ config:
   BinderHub:
     base_url: /services/binder/
     hub_url: https://notebooks-test.gesis.org/
-    query_parameter_names: ['run-nbgitpuller']
+    query_parameter_names: ['run-nbgitpuller', 'reset-repo']
 
     appendix: |
       USER root
@@ -71,7 +71,7 @@ jupyterhub:
             if repo_dir == data_folder:
               repo_dir += '_'
             symlink_dir = join(repo_dir, data_folder)
-            # symlink_cmd: create a symlink to home if directory or symlink with same name does not exist
+            # symlink_cmd: create a symlink to ~/{data_folder} if directory or symlink with same name does not exist
             symlink_cmd = f"if [ -d {symlink_dir} ]; " \
                           f"then echo 'directory {symlink_dir} exists'; " \
                           f"elif [ -L {symlink_dir} ]; " \
@@ -80,8 +80,10 @@ jupyterhub:
             if self.repo_url.endswith('github.com/gesiscss/data_science_image'):
               command = f"mkdir -p {repo_dir} && " + symlink_cmd
               self.lifecycle_hooks = {'postStart': {'exec': {'command': ["/bin/sh", "-c", command]}}}
+            elif self.user_options.get('reset-repo', 'false').lower() in ['true', '1']:
+              command = f"rm -rf {repo_dir} && gitpuller {self.repo_url} master {repo_dir} && " + symlink_cmd
+              self.lifecycle_hooks = {'postStart': {'exec': {'command': ["/bin/sh", "-c", command]}}}
             elif self.user_options.get('run-nbgitpuller', 'true').lower() in ['true', '1']:
-              # by default run nbgitpuller
               command = f"gitpuller {self.repo_url} master {repo_dir} && " + symlink_cmd
               self.lifecycle_hooks = {'postStart': {'exec': {'command': ["/bin/sh", "-c", command]}}}
             else:
