use webroot plugin

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,6 +56,14 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
+    # for webroot plugin - https://certbot.eff.org/docs/using.html#webroot
+	location ^~ /.well-known/acme-challenge {
+        root /var/www/html;
+	}
+	location = /.well-known/acme-challenge/ {
+		return 404;
+	}
+
     location / {
         proxy_buffering off;
 
