--- a/persistent_storage/nginx.conf
+++ b/persistent_storage/nginx.conf
@@ -60,6 +60,14 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
+    # for webroot plugin - https://certbot.eff.org/docs/using.html#webroot
+	location ^~ /.well-known/acme-challenge {
+        root /var/www/html;
+	}
+	location = /.well-known/acme-challenge/ {
+		return 404;
+	}
+
     location /services/binder/ {
         proxy_buffering off;
 
@@ -114,6 +122,14 @@ server {
     add_header Strict-Transport-Security max-age=15768000;
 
     location = /favicon.ico { access_log off; log_not_found off; }
+
+    # for webroot plugin - https://certbot.eff.org/docs/using.html#webroot
+	location ^~ /.well-known/acme-challenge {
+        root /var/www/html;
+	}
+	location = /.well-known/acme-challenge/ {
+		return 404;
+	}
 
     location / {
         proxy_pass http://keycloak;
