gesiscss/k8s-hub-example:7236610

--- a/persistent_storage/config.yaml
+++ b/persistent_storage/config.yaml
@@ -24,7 +24,7 @@ jupyterhub:
     baseUrl: /
     image:
       name: gesiscss/k8s-hub-example
-      tag: ""
+      tag: "7236610"
 
     services:
       binder:
